Bug #37730: revert removal of a CSS rule for Grid scrollbars (introduced by Bug #36291)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-1@57877 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/Grid.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/Grid.styl
@@ -1,5 +1,10 @@
 @import "variables";
 
+.umcGrid .dojoxGridScrollbox {
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
+
 .umc .umcMultiSelect .dojoxGridView {
 	min-width: 100%;
 	max-width: 100%;
